; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm_binding.c_iwm_mvm_binding_add_vif.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm_binding.c_iwm_mvm_binding_add_vif.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwm_softc = type { i32 }
%struct.iwm_vap = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iwm_mvm_binding_add_vif(%struct.iwm_softc* %0, %struct.iwm_vap* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.iwm_softc*, align 8
  %5 = alloca %struct.iwm_vap*, align 8
  store %struct.iwm_softc* %0, %struct.iwm_softc** %4, align 8
  store %struct.iwm_vap* %1, %struct.iwm_vap** %5, align 8
  %6 = load %struct.iwm_vap*, %struct.iwm_vap** %5, align 8
  %7 = getelementptr inbounds %struct.iwm_vap, %struct.iwm_vap* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* @EINVAL, align 4
  store i32 %11, i32* %3, align 4
  br label %29

12:                                               ; preds = %2
  %13 = load %struct.iwm_softc*, %struct.iwm_softc** %4, align 8
  %14 = load %struct.iwm_vap*, %struct.iwm_vap** %5, align 8
  %15 = getelementptr inbounds %struct.iwm_vap, %struct.iwm_vap* %14, i32 0, i32 1
  %16 = load i32, i32* @FALSE, align 4
  %17 = call i64 @iwm_mvm_sf_update(%struct.iwm_softc* %13, i32* %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %12
  %20 = load i32, i32* @EINVAL, align 4
  store i32 %20, i32* %3, align 4
  br label %29

21:                                               ; preds = %12
  %22 = load %struct.iwm_softc*, %struct.iwm_softc** %4, align 8
  %23 = load %struct.iwm_vap*, %struct.iwm_vap** %5, align 8
  %24 = load %struct.iwm_vap*, %struct.iwm_vap** %5, align 8
  %25 = getelementptr inbounds %struct.iwm_vap, %struct.iwm_vap* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @TRUE, align 4
  %28 = call i32 @iwm_mvm_binding_update(%struct.iwm_softc* %22, %struct.iwm_vap* %23, i32 %26, i32 %27)
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %21, %19, %10
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @iwm_mvm_sf_update(%struct.iwm_softc*, i32*, i32) #1

declare dso_local i32 @iwm_mvm_binding_update(%struct.iwm_softc*, %struct.iwm_vap*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
